--- a/redux-toolkit-counter-app/src/App.css
+++ b/redux-toolkit-counter-app/src/App.css
@@ -32,7 +32,27 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+
+section {
+  display: grid;
+  grid-gap: 10px;
+  padding: 15px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+article {
+  background-color: chocolate;
+  color: black;
+}
+
+@media screen and (max-width: 600px) {
+  section {
+    grid-template-columns: auto;
   }
 }
